<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#002F2F"

    tools:context="com.example.misconsumosmiguee009.misconsumos.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        >

        <Button
            android:id="@+id/ingreso"
            android:text="@string/ingresos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/gastos"
            android:text="@string/gastos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/movimientos"
            android:text="@string/mismovimientos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/reiniciarbd"
            android:text="Reiniciar Mis Consumos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/salir"
            android:text="@string/salir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >
            <TextView
                android:textSize="25dp"
                android:text="Ingresos :"
                android:textColor="#EFECCA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:textSize="25dp"
                android:textColor="#EFECCA"
                android:id="@+id/ingresotext"
                android:text="@string/ingresotext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="25dp"
                android:text="Gastos    :"
                android:textColor="#EFECCA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:textSize="25dp"
                android:id="@+id/gastostext"
                android:text="@string/gastostext"
                android:textColor="#EFECCA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="25dp"
                android:text="Saldo       :"
                android:textColor="#EFECCA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:textSize="25dp"
                android:id="@+id/saldo"
                android:textColor="#EFECCA"
                android:text="@string/saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
